docs/source/api/v11/index.rst
.. 
.. 
.. Licensed under the Apache License, Version 2.0 (the "License");
.. you may not use this file except in compliance with the License.
.. You may obtain a copy of the License at
.. 
..     http://www.apache.org/licenses/LICENSE-2.0
.. 
.. Unless required by applicable law or agreed to in writing, software
.. distributed under the License is distributed on an "AS IS" BASIS,
.. WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
.. See the License for the specific language governing permissions and
.. limitations under the License.
..

API 1.1 Reference
*****************
Traffic Ops v1.1 API Documentation

.. toctree:: 
  :maxdepth: 1

  asn
  cachegroup
  cdn
  changelog
  deliveryservice
  hwinfo
  parameter
  phys_location
  profile
  region
  role
  server
  static_dns
  status
  system
  to_extension
  type
  user
