docs/source/api/v12/index.rst
.. 
.. 
.. Licensed under the Apache License, Version 2.0 (the "License");
.. you may not use this file except in compliance with the License.
.. You may obtain a copy of the License at
.. 
..     http://www.apache.org/licenses/LICENSE-2.0
.. 
.. Unless required by applicable law or agreed to in writing, software
.. distributed under the License is distributed on an "AS IS" BASIS,
.. WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
.. See the License for the specific language governing permissions and
.. limitations under the License.
..


API 1.2 Reference
*****************
Traffic Ops API V1.2 

.. toctree:: 
  :maxdepth: 1

  api_capability
  asn
  cache
  cachegroup
  cachegroup_parameter
  cachegroup_fallbacks
  cache_stats
  capability
  cdn
  changelog
  configfiles_ats
  deliveryservice
  deliveryservice_regex
  deliveryservice_stats
  division
  federation
  federation_deliveryservice
  federation_federationresolver
  federation_resolver
  federation_user
  hwinfo
  iso
  job
  parameter
  phys_location
  profile
  profile_parameter
  influxdb
  region
  role
  server
  static_dns
  status
  steering_target
  system
  tenant
  to_extension
  type
  user
  topology
